fixing accordion on mobile

--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -34,3 +34,8 @@
     border-radius: 5px;
     color: white;
 }
+
+
+.body-projects {
+    min-height: 100vh;
+}
